Cambio de iframes por img

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="contenedor-principal">
                 <div class="contenedor-texto">
                     <div class="contenedor-resumen">
-                        <h1>Hola, soy juan pablo y me gusta todo lo relacionado con la programación.</h1>
+                        <h1>Hola, soy Juan Pablo.</h1>
                         <h2>Mis estudios iniciaron en el Instituto Industrial Luis A. Huergo y actualmente estoy participando del proyecto Oracle ONE en Arula Latam.</h2>
                     </div>                
                     <div class="contenedor-redes">
@@ -376,7 +376,7 @@
                 <h2>Experiencia Profesional</h2>
                 <div class="contenedor-proyecto">
                     <div class="contenedor-demo">
-                        <iframe scrolling="no" src="https://etsium.github.io/Encipter-Etsium-Challenge/" frameborder="0" allowfullscreen></iframe>
+                        <img src="imagenes/presentacion-1.png" alt="Imagen de la pagina">
                     </div>
                     <div class="contenedor-proyecto-info">
                         <h2>Encriptador de texto</h2>
@@ -387,7 +387,7 @@
                 </div>
                 <div class="contenedor-proyecto">
                     <div class="contenedor-demo">
-                        <iframe scrolling="no" src="https://etsium.github.io/Ahorcado-Challenge/" frameborder="0" allowfullscreen></iframe>
+                        <img src="imagenes/presentacion-2.png" alt="Imagen de la pagina">
                     </div>
                     <div class="contenedor-proyecto-info">
                         <h2>Juego con HTML, CSS & JS</h2>
@@ -398,7 +398,7 @@
                 </div>
                 <div class="contenedor-proyecto">
                     <div class="contenedor-demo">
-                        <iframe scrolling="no" src="https://etsium.github.io/Barberia-Alura/index.html" frameborder="0" allowfullscreen></iframe>
+                        <img src="imagenes/presentacion-3.png" alt="Imagen de la pagina">
                     </div>
                     <div class="contenedor-proyecto-info">
                         <h2>Barberia HTML & CSS</h2>
@@ -409,7 +409,7 @@
                 </div>
                 <div class="contenedor-proyecto">
                     <div class="contenedor-demo">
-                        <iframe scrolling="no" src="https://etsium.github.io/BlogCafe-Udemy/" frameborder="0" allowfullscreen></iframe>
+                        <img src="imagenes/presentacion-4.png" alt="Imagen de la pagina">
                     </div>
                     <div class="contenedor-proyecto-info">
                         <h2>Blog Cafe HTML, CSS & JS</h2>
