Restructuracion de css en base a BEM

--- a/index.html
+++ b/index.html
@@ -5,8 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/Header/header.css">
+    <link rel="stylesheet" href="css/Header/headerResponsive.css">
+    <link rel="stylesheet" href="css/SobreMi/sobremi.css">
+    <link rel="stylesheet" href="css/Skills/skill.css">
+    <link rel="stylesheet" href="css/Hobbies/hobbie.css">
+    <link rel="stylesheet" href="css/FormacionAcademica/formacionacademica.css">
+    <link rel="stylesheet" href="css/FormacionAcademica/formacionacademicaresponsive.css">
+    <link rel="stylesheet" href="css/FormacionProfesional/formacionprofesional.css">
+    <link rel="stylesheet" href="css/FormacionProfesional/formacionprofesionalresponsive.css">   
+    <link rel="stylesheet" href="css/Contacto/contacto.css">
+    <link rel="stylesheet" href="css/Contacto/contactoresponsive.css">
+    <link rel="stylesheet" href="css/Footer/footer.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@200;400;700&display=swap" rel="stylesheet">
@@ -60,7 +72,7 @@
                         </ul>
                     </div>
                 </div>                
-                <img id="foto-perfil" src="imagenes/perfil.jpg" alt="Mi foto de perfil">
+                <img id="foto-perfil" src="#" alt="Mi foto de perfil">
             </div>
         </div>        
     </header>
