--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/Header/header.css">
     <link rel="stylesheet" href="css/Header/headerResponsive.css">
     <link rel="stylesheet" href="css/SobreMi/sobremi.css">
+    <link rel="stylesheet" href="css/SobreMi/sobremiResponsive.css">
     <link rel="stylesheet" href="css/Skills/skill.css">
     <link rel="stylesheet" href="css/Hobbies/hobbie.css">
     <link rel="stylesheet" href="css/FormacionAcademica/formacionacademica.css">
@@ -30,14 +31,51 @@
             <div class="contenedor__principal">
                 <div class="contenedor__menu">
                     <p>Juan Pablo Mota</p>
-                    <nav>
+                    <nav id="nav">
                         <ul>
-                            <li><a href="#sobre-mi">Sobre Mí</a></li>
-                            <li><a href="#skill">Skills</a></li>
-                            <li><a href="#hobbie">Hobbies</a></li>
-                            <li><a href="#formacion">Formación</a></li>
-                            <li><a href="#proyecto">Proyectos</a></li>
-                            <li><a href="#contacto">juanpablomota96@hotmail.com</a></li>
+                            <li><a class="menu__link" href="#sobre-mi">
+                                Sobre Mí
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" fill="var(--blanco)">
+                                    <path d="M19 2H5a2 2 0 0 0-2 2v13a2 2 0 0 0 2 2h4l3 3 3-3h4a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2zm-7 3c1.727 0 3 1.272 3 3s-1.273 3-3 3c-1.726 0-3-1.272-3-3s1.274-3 3-3zM7.177 16c.558-1.723 2.496-3 4.823-3s4.266 1.277 4.823 3H7.177z"></path>
+                                </svg>                                
+                                </a>
+                            </li>
+                            <li><a class="menu__link" href="#skill">
+                                Skills
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" fill="var(--blanco)">
+                                    <path fill="none" d="M0 0h24v24H0z"/><path d="M2.132 13.63a9.942 9.942 0 0 1 0-3.26c1.102.026 2.092-.502 2.477-1.431.385-.93.058-2.004-.74-2.763a9.942 9.942 0 0 1 2.306-2.307c.76.798 1.834 1.125 2.764.74.93-.385 1.457-1.376 1.43-2.477a9.942 9.942 0 0 1 3.262 0c-.027 1.102.501 2.092 1.43 2.477.93.385 2.004.058 2.763-.74a9.942 9.942 0 0 1 2.307 2.306c-.798.76-1.125 1.834-.74 2.764.385.93 1.376 1.457 2.477 1.43a9.942 9.942 0 0 1 0 3.262c-1.102-.027-2.092.501-2.477 1.43-.385.93-.058 2.004.74 2.763a9.942 9.942 0 0 1-2.306 2.307c-.76-.798-1.834-1.125-2.764-.74-.93.385-1.457 1.376-1.43 2.477a9.942 9.942 0 0 1-3.262 0c.027-1.102-.501-2.092-1.43-2.477-.93-.385-2.004-.058-2.763.74a9.942 9.942 0 0 1-2.307-2.306c.798-.76 1.125-1.834.74-2.764-.385-.93-1.376-1.457-2.477-1.43zM12 15a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+                                </svg>                                
+                                </a>
+                            </li>
+                            <li><a class="menu__link" href="#hobbie">
+                                Hobbies
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" fill="var(--blanco)">
+                                    <path fill="none" d="M0 0H24V24H0z"/><path d="M11 2c4.068 0 7.426 3.036 7.934 6.965l2.25 3.539c.148.233.118.58-.225.728L19 14.07V17c0 1.105-.895 2-2 2h-1.999L15 22H6v-3.694c0-1.18-.436-2.297-1.244-3.305C3.657 13.631 3 11.892 3 10c0-4.418 3.582-8 8-8zm0 2c-3.314 0-6 2.686-6 6 0 1.385.468 2.693 1.316 3.75C7.41 15.114 8 16.667 8 18.306V20h5l.002-3H17v-4.248l1.55-.664-1.543-2.425-.057-.442C16.566 6.251 14.024 4 11 4zm-.53 3.763l.53.53.53-.53c.684-.684 1.792-.684 2.475 0 .684.683.684 1.791 0 2.474L11 13.243l-3.005-3.006c-.684-.683-.684-1.791 0-2.474.683-.684 1.791-.684 2.475 0z"/>
+                                </svg>                                
+                                </a>
+                            </li>
+                            <li><a class="menu__link" href="#formacion">
+                                Formación
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" fill="var(--blanco)">
+                                    <path d="M10.394 2.08a1 1 0 00-.788 0l-7 3a1 1 0 000 1.84L5.25 8.051a.999.999 0 01.356-.257l4-1.714a1 1 0 11.788 1.838L7.667 9.088l1.94.831a1 1 0 00.787 0l7-3a1 1 0 000-1.838l-7-3zM3.31 9.397L5 10.12v4.102a8.969 8.969 0 00-1.05-.174 1 1 0 01-.89-.89 11.115 11.115 0 01.25-3.762zM9.3 16.573A9.026 9.026 0 007 14.935v-3.957l1.818.78a3 3 0 002.364 0l5.508-2.361a11.026 11.026 0 01.25 3.762 1 1 0 01-.89.89 8.968 8.968 0 00-5.35 2.524 1 1 0 01-1.4 0zM6 18a1 1 0 001-1v-2.065a8.935 8.935 0 00-2-.712V17a1 1 0 001 1z"></path>
+                                </svg>                                
+                                </a>
+                            </li>
+                            <li><a class="menu__link" href="#proyecto">
+                                Proyectos
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" fill="var(--blanco)">
+                                    <path fill="none" d="M0 0h24v24H0z"/>
+                                    <path d="M3 3h18a1 1 0 0 1 1 1v16a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1zm13.464 12.536L20 12l-3.536-3.536L15.05 9.88 17.172 12l-2.122 2.121 1.414 1.415zM6.828 12L8.95 9.879 7.536 8.464 4 12l3.536 3.536L8.95 14.12 6.828 12zm4.416 5l3.64-10h-2.128l-3.64 10h2.128z"/>
+                                </svg>                                
+                                </a>
+                            </li>
+                            <li><a class="menu__link" href="#contacto">
+                                Contacto
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" fill="var(--blanco)">
+                                    <path d="M20 4H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2zm0 4.7-8 5.334L4 8.7V6.297l8 5.333 8-5.333V8.7z"></path>
+                                </svg>
+                                </a>
+                            </li>
                         </ul>
                     </nav>
                 </div>  
@@ -46,7 +84,7 @@
                 <div class="contenedor__texto">
                     <div class="contenedor__resumen">
                         <h1>Hola, soy Juan Pablo.</h1>
-                        <h2>Mis estudios iniciaron en el Instituto Industrial Luis A. Huergo y actualmente estoy participando del proyecto Oracle ONE en Arula Latam.</h2>
+                        <h2>Mis estudios iniciaron en el Instituto Industrial Luis A. Huergo y actualmente estoy participando del programa Oracle Next Education en Arula Latam.</h2>
                     </div>                
                     <div class="contenedor__redes">
                         <ul>
@@ -54,8 +92,7 @@
                                 <a href="https://github.com/etsium">
                                     Github
                                     <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>GitHub</title><path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"/></svg>
-                                </a>
-                                
+                                </a>                                
                             </li>
                             <li>
                                 <a href="https://www.linkedin.com/in/juan-pablo-mota-7b06a1a6/es">
