--- a/index.html
+++ b/index.html
@@ -428,50 +428,61 @@
 
         <section id="proyecto">
             <div class="contenedor__header">
-                <h2>Experiencia Profesional</h2>
-                <div class="contenedor__proyecto">
-                    <div class="contenedor__demo">
-                        <img src="imagenes/presentacion-1.png" alt="Imagen de la pagina">
+                <div class="slideshow-container">
+                    <h2>Experiencia Profesional</h2>
+                    <div class="mySlides fade contenedor__proyecto">
+                        <div class="contenedor__demo">
+                            <img src="imagenes/presentacion-1.png" alt="Imagen de la pagina">
+                        </div>
+                        <div class="contenedor__proyecto__info">
+                            <h2>Encriptador de texto</h2>
+                            <h3>Challenge Alura Codificador</h3>
+                            <a href="https://github.com/etsium/Encipter-Etsium-Challenge"><button>Repositorio</button></a>
+                            <a href="https://etsium.github.io/Encipter-Etsium-Challenge/"><button>Ver demo</button></a>                        
+                        </div>
                     </div>
-                    <div class="contenedor__proyecto__info">
-                        <h2>Encriptador de texto</h2>
-                        <h3>Challenge Alura Codificador</h3>
-                        <a href="https://github.com/etsium/Encipter-Etsium-Challenge"><button>Repositorio</button></a>
-                        <a href="https://etsium.github.io/Encipter-Etsium-Challenge/"><button>Ver demo</button></a>                        
+                    <div class="mySlides fade contenedor__proyecto">
+                        <div class="contenedor__demo">
+                            <img src="imagenes/presentacion-2.png" alt="Imagen de la pagina">
+                        </div>   
+                        <div class="contenedor__proyecto__info">
+                            <h2>Juego con HTML, CSS & JS</h2>
+                            <h3>Challenge Alura Ahorcado</h3>
+                            <a href="https://github.com/etsium/Ahorcado-Challenge"><button>Repositorio</button></a>
+                            <a href="https://etsium.github.io/Ahorcado-Challenge/"><button>Ver demo</button></a>                        
+                        </div>                                            
                     </div>
+                    <div class="mySlides fade contenedor__proyecto">
+                        <div class="contenedor__demo">
+                            <img src="imagenes/presentacion-3.png" alt="Imagen de la pagina">
+                        </div>
+                        <div class="contenedor__proyecto__info">
+                            <h2>Barberia HTML & CSS</h2>
+                            <h3>Pagina de practica - Alura</h3>
+                            <a href="https://github.com/etsium/Barberia-Alura"><button>Repositorio</button></a>
+                            <a href="https://etsium.github.io/Barberia-Alura/index.html"><button>Ver demo</button></a>                        
+                        </div>
+                    </div>
+                    <div class="mySlides fade contenedor__proyecto">
+                        <div class="contenedor__demo">
+                            <img src="imagenes/presentacion-4.png" alt="Imagen de la pagina">
+                        </div>    
+                        <div class="contenedor__proyecto__info">
+                            <h2>Blog Cafe HTML, CSS & JS</h2>
+                            <h3>Pagina de practica - Udemy</h3>
+                            <a href="https://github.com/etsium/BlogCafe-Udemy"><button>Repositorio</button></a>
+                            <a href="https://etsium.github.io/BlogCafe-Udemy/"><button>Ver demo</button></a>                        
+                        </div>                    
+                    </div>                                 
+                    <a class="prev">&#10094;</a>
+                    <a class="next">&#10095;</a>
                 </div>
-                <div class="contenedor__proyecto">
-                    <div class="contenedor__demo">
-                        <img src="imagenes/presentacion-2.png" alt="Imagen de la pagina">
-                    </div>
-                    <div class="contenedor__proyecto__info">
-                        <h2>Juego con HTML, CSS & JS</h2>
-                        <h3>Challenge Alura Ahorcado</h3>
-                        <a href="https://github.com/etsium/Ahorcado-Challenge"><button>Repositorio</button></a>
-                        <a href="https://etsium.github.io/Ahorcado-Challenge/"><button>Ver demo</button></a>                        
-                    </div>
-                </div>
-                <div class="contenedor__proyecto">
-                    <div class="contenedor__demo">
-                        <img src="imagenes/presentacion-3.png" alt="Imagen de la pagina">
-                    </div>
-                    <div class="contenedor__proyecto__info">
-                        <h2>Barberia HTML & CSS</h2>
-                        <h3>Pagina de practica - Alura</h3>
-                        <a href="https://github.com/etsium/Barberia-Alura"><button>Repositorio</button></a>
-                        <a href="https://etsium.github.io/Barberia-Alura/index.html"><button>Ver demo</button></a>                        
-                    </div>
-                </div>
-                <div class="contenedor__proyecto">
-                    <div class="contenedor__demo">
-                        <img src="imagenes/presentacion-4.png" alt="Imagen de la pagina">
-                    </div>
-                    <div class="contenedor__proyecto__info">
-                        <h2>Blog Cafe HTML, CSS & JS</h2>
-                        <h3>Pagina de practica - Udemy</h3>
-                        <a href="https://github.com/etsium/BlogCafe-Udemy"><button>Repositorio</button></a>
-                        <a href="https://etsium.github.io/BlogCafe-Udemy/"><button>Ver demo</button></a>                        
-                    </div>
+                <br>              
+                <div style="text-align:center">
+                    <span class="dot" id="1"></span>
+                    <span class="dot" id="2"></span>
+                    <span class="dot" id="3"></span>
+                    <span class="dot" id="4"></span>
                 </div>
             </div>
         </section>
