--- a/index.html
+++ b/index.html
@@ -559,6 +559,11 @@
                     <span class="dot" id="3"></span>
                     <span class="dot" id="4"></span>
                     <span class="dot" id="5"></span>
+                    <span class="dot" id="6"></span>
+                    <span class="dot" id="7"></span>
+                    <span class="dot" id="8"></span>
+                    <span class="dot" id="9"></span>
+                    <span class="dot" id="10"></span>
                 </div>
             </div>
         </section>
