Correccion de texto

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <div class=" contenedor__principal">
                     <h2 class="titulo">Sobre Mi</h2>
                     <p class="texto">Desde que en el secundario me mostraron todo lo que se podía hacer con la tecnología en general me encanto, desde crear aplicaciones en visual fox, modelar/animar en 3d, desarrollo web, programación estructura e orientada a objetos, edición de video/sonido, hasta incluso crear mis proyectos con plaquetas y microchips.</p>
-                    <p class="texto">Al finalizar el secundario, me centre mas en por el lado de desarrollo web y creación de video. Aprendiendo por mi cuenta en desde videos por internet hasta webs como Domestika, Udemy y actualmente participando del proyecto Oracle One en Arula.</p>
+                    <p class="texto">Al finalizar el secundario, me centre mas en por el lado de desarrollo web y creación de video. Aprendiendo por mi cuenta en desde videos por internet hasta webs como Domestika, Udemy y actualmente participando del proyecto Oracle One en Alura.</p>
                 </div>                
             </div>            
         </section>
